<resources>
    <string name="app_name">CPARP</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="title_activity_main">My Clients</string>
    <string name="title_activity_defaulter">Defaulters</string>
    <string name="title_add_encounter">Dispense Drugs</string>
    <string name="title_search_encounter">Search Record</string>
    <string name="search_hint">Type and Search</string>

    <string name="action_search">Search</string>
    <string name="action_refill">ARV Refill</string>
    <string name="action_chroniccare">Chronic Care Screening</string>
    <string name="action_drugtherapy">Drug Therapy Monitoring</string>
    <string name="action_refill_history">ARV Refill History</string>
    <string name="action_chroniccare_history">Chronic Care Screening History</string>
    <string name="action_drugtherapy_history">Drug Therapy Monitoring History</string>
    <string name="action_clienttracking_history">Client Tracking History</string>
    <string name="action_discontinue">Discontinue Service</string>

  <string name="server_url">http://lamis3.sidhas.org:8080/</string>
<!--  <string name="server_url">http://192.168.43.55:8080/LAMIS3/</string>-->
    <string-array name="drawer_items">
        <item>Client Encounter</item>
        <item>Client Tracking</item>
        <item>HIV Testing Services</item>
        <item>Monthly Summary Form</item>
        <item>Synchronize</item>
        <item>Activate</item>
    </string-array>

    <string-array name="spinner_yes_no">
        <item></item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="spinner_bmi">
        <item></item>
        <item>&lt;18.5 (Underweight)</item>
        <item>18.5-24.9 (Healthy)</item>
        <item>25.0-29.9 (Overweight)</item>
        <item>&gt;30 (Obesity)</item>
        <item>&gt;40 (Morbid Obesity)</item>
    </string-array>

    <string-array name="spinner_muac">
        <item></item>
        <item>&lt;11.5cm (Severe Acute Malnutrition)</item>
        <item>11.5-12.5cm (Moderate Acute Malnutrition)</item>
        <item>&gt;12.5cm (Well nourished)</item>
    </string-array>

    <string-array name="spinner_phdp">
        <item></item>
        <item>=&lt;3</item>
        <item>4-8</item>
        <item>=&gt;9</item>
    </string-array>

    <string-array name="spinner_severity">
        <item></item>
        <item>Mild (Grade 1)</item>
        <item>Moderate (Grade 2)</item>
        <item>Severe (Grade 3)</item>
        <item>Life-Threatening (Grade 4)</item>
    </string-array>

    <string-array name="spinner_tracker">
        <item></item>
        <item>Phone Call</item>
        <item>Home Visit</item>
    </string-array>

    <string-array name="spinner_outcome">
        <item></item>
        <item>Known Death</item>
        <item>Stopped Treatment</item>
        <item>Self Transfer</item>
        <item>Agreed to Return</item>
        <item>Not Reached</item>
    </string-array>
    <string-array name="spinner_discontinue">
        <item> </item>
        <item>Becomes pregnant</item>
        <item>Unable to pay service charge</item>
        <item>Develops comorbidity</item>
        <item>Loss of viral suppression</item>
        <item>Decides to go back to hospital</item>
        <item>Becomes non-adherent</item>
    </string-array>

    <string-array name="spinner_month">
        <item></item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="login_button_label">Login</string>
    <string name="activate_button_label">Activate</string>
    <string name="save_button_label">Save</string>
    <string name="sync_button_label">Synchronize</string>
    <string name="sync_description">Synchronize data with LAMIS server</string>
    <string name="download_checkbox_label">Also download available patients data to my device</string>
    <string name="user_name_label">Enter username</string>
    <string name="pin_label">Enter activation code</string>

    <string name="date_label">Encounter date: </string>
    <string name="question1_label">Did the CP receive a copy of Informed Consent Form duly signed by patient for participation in the Community ART Refill program?: </string>
    <string name="question2_label">Did the CP receive completed Eligibility Determination and Devolvement Form from health facility?: </string>
    <string name="question3_label">Did the CP receive Pharmacy Order Forms duly filled and signed for bimonthly ARV refills from the health facility?: </string>
    <string name="question4_label">Did patient confirm that he/she received two months ARV refill at the health facility during the last visit?: </string>
    <string name="question5_label">Was chronic care screening services provided by CP using Care and Support checklist during this visit?: </string>
    <string name="question6_label">Was medication adherence assessment and counselling services provided by CP during this visit?: </string>
    <string name="question7_label">Was patient screened for medication errors and adverse drug reactions at the CP during this visit?: </string>
    <string name="question8_label">Were prescribed ART regimen dispensed at the CP during this visit?: </string>
    <string name="question9_label">Were prescribed concomitant drugs dispensed at the CP during this visit?: </string>
    <string name="regimen1_label">Medicine #1 Dispensed</string>
    <string name="duration1_label">Duration in days (medicine #1)</string>
    <string name="prescribed1_label">Quantity Prescribed (medicine #1)</string>
    <string name="dispensed1_label">Quantity Dispensed (medicine #1)</string>
    <string name="regimen2_label">Medicine #2 Dispensed</string>
    <string name="duration2_label">Duration in days (medicine #2)</string>
    <string name="prescribed2_label">Quantity Prescribed (medicine #2)</string>
    <string name="dispensed2_label">Quantity Dispensed (medicine #2)</string>
    <string name="regimen3_label">Medicine #3 Dispensed</string>
    <string name="duration3_label">Duration in days (medicine #3)</string>
    <string name="prescribed3_label">Quantity Prescribed (medicine #3)</string>
    <string name="dispensed3_label">Quantity Dispensed (medicine #3)</string>
    <string name="regimen4_label">Medicine #4 Dispensed</string>
    <string name="duration4_label">Duration in days (medicine #4)</string>
    <string name="prescribed4_label">Quantity Prescribed (medicine #4)</string>
    <string name="dispensed4_label">Quantity Dispensed (medicine #4)</string>
    <string name="notes_label">Any concerns:</string>
    <string name="next_refill_label">Date of next ARV refill</string>

    <string name="additional_service1_label">Insecticide Treated Nets</string>
    <string name="additional_service2_label">Intermittent Prophylactic Treatment</string>
    <string name="additional_service3_label">Cervical Cancer Screening</string>
    <string name="additional_service4_label">Active Member of SG</string>
    <string name="additional_service5_label">Family Planning</string>
    <string name="additional_service6_label">Basic Care Kits</string>
    <string name="additional_service7_label">Disclosure Counseling</string>
    <string name="additional_service8_label">Social Services</string>
    <string name="additional_service9_label">Linkage to LGAs</string>
    <string name="additional_service10_label">Legal</string>
    <string name="additional_service11_label">Other</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Remove or change this placeholder text -->
</resources>
