<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"

    >

    <android.support.v7.widget.CardView
        android:id="@+id/personalDetailsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/textView1"
                style="@style/TextViewMedium"
                android:layout_marginTop="36dp"

                android:layout_marginRight="100dp"
                android:text="@string/user_name_label" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_background"
                android:paddingTop="2dp"
                android:paddingBottom="4dp">

                <EditText
                    android:id="@+id/user_name"
                    android:hint="Enter Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewMedium"
                android:layout_marginTop="36dp"
                android:layout_marginRight="85dp"
                android:text="@string/pin_label" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_text_background"
                android:paddingTop="2dp"
                android:paddingBottom="4dp">

                <EditText
                    android:id="@+id/pin"
                    android:hint="Enter Activation code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/activate_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/blue_button"
                android:elevation="2dp"

                android:padding="16dp"
                android:text="@string/activate_button_label"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>